[package]
name = "nftar"
version = "0.1.0"
authors = ["Kubelt <admin@kubelt.com>"]
edition = "2018"
description = "An application that generates unique PFP for minting in the 3iD dapp"
keywords = ["color", "gradient", "pfp", "3iD", "NFT", "Kubelt"]
categories = ["graphics"]
readme = "README.md"
repository = "https://github.com/kubelt/kubelt"
license = "MIT OR Apache-2.0"
exclude = [
	".github/*",
	"docs/*",
	"test_data/*",
	"tests/*",
]

[profile.release]
lto = true
strip = true

[dependencies]
atty = "0.2.14"
clap = { version = "= 3.1.18", features = ["derive", "wrap_help"] }
colorgrad = "0.6.0"
svg = "0.10.0"
terminal_size = "0.1.17"
noise =  {git = "https://github.com/Razaekel/noise-rs/", branch = "develop" }
image = "0.24.3"
random_color = "0.6.1"
rand = "0.8.5"